--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "@fontsource-variable/inter": "^5.2.8",
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/vite": "^4.1.11",
         "@types/react": "^19.0.3",
