--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
+        "tw-animate-css": "^1.4.0",
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
         "@fontsource-variable/inter": "^5.2.8",
         "@inertiajs/react": "^2.0.0",
+        "@radix-ui/react-slot": "^1.2.4",
         "@tailwindcss/vite": "^4.1.11",
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
@@ -36,12 +38,16 @@
         "concurrently": "^9.0.1",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^2.0",
+        "lucide-react": "^0.555.0",
+        "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "tailwind-merge": "^3.0.1",
+        "sonner": "^2.0.7",
+        "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.0.0",
         "typescript": "^5.7.2",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "zod": "^4.1.13"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
