--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     ],
     "resources/**/*.{js,jsx,ts,tsx,vue}": [
       "prettier --write",
-      "eslint --fix --max-warnings 0"
+      "eslint --fix --max-warnings 0 --no-warn-ignored"
     ],
     "resources/**/*.{ts,tsx}": [
       "bash -c 'tsc --noEmit'"
@@ -45,8 +45,11 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.8",
+    "@hookform/resolvers": "^5.2.2",
     "@inertiajs/react": "^2.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.0.3",
@@ -61,6 +64,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.67.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.0",
