--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@laravel/echo-react": "^2.2.6",
     "@laravel/vite-plugin-wayfinder": "^0.1.3",
     "@types/node": "^22.13.5",
     "eslint": "^9.17.0",
@@ -36,10 +37,12 @@
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
     "husky": "^9.1.7",
+    "laravel-echo": "^2.2.6",
     "lint-staged": "^16.2.7",
     "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "pusher-js": "^8.4.0",
     "tw-animate-css": "^1.4.0",
     "typescript-eslint": "^8.23.0"
   },
