--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-dom": "^19.0.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.67.0",
+    "react-intersection-observer": "^10.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.0",
